# opensuse_autoupdate_applet

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  opensuse-update-applet-1.0.0-1.x86_64.rpm  opensuse-update-applet.spec  ossupdate.desktop  ossupdate.spec
src/: autostartmanager.cpp  main.cpp  mainwindow.cpp  mainwindow.h  passwordmanager.cpp  selfupdater.cpp  settings.cpp  settings.h  traymanager.cpp  updatechecker.cpp  updatechecker.h
